--- a/README
+++ b/README
@@ -1,3 +1,17 @@
+Agradecimientos a : 
+
+-God.
+
+-Crewrktablets.
+
+-bq.
+
+
+
+
+
+
+
 	Linux kernel release 3.x <http://kernel.org/>
 
 These are the release notes for Linux version 3.  Read them carefully,
