--- a/README
+++ b/README
@@ -1,3 +1,26 @@
+	E.P.D. Center.
+
+|||||Las fuentes se descargan de la siguiente forma:
+|||||
+||||| $ git clone https://github.com/EPDCenterSpain/bq-DC-v1.git
+||||| 
+|||||Y se compilan así:
+|||||
+||||| $ make bqCurie_defconfig
+|||||
+|||||
+||||| $ make -jX kernel.img   Nota: Debéis sustitui la "X" de "make -jX" por el número de hilos de vuestro procesador.
+|||||
+|||||
+||||| 
+||||| 
+
+
+
+
+
+
+
 Agradecimientos a : 
 
 -God.
